# cuda-efficient-features

./: .gitignore  CMakeLists.txt  dev_build_and_test.sh  dev_docker.sh
cmake/: Config.cmake.in
modules/cuda_efficient_features/: CMakeLists.txt
modules/cuda_efficient_features/include/: cuda_efficient_descriptors.h  cuda_efficient_features.h
modules/cuda_efficient_features/src/: cuda_efficient_features.cpp  cuda_orb.cpp  cuda_orb_internal.h
modules/efficient_features/: CMakeLists.txt
modules/efficient_features/include/: efficient_descriptors.h
samples/: sample_common.h
tests/: descriptor_test.cpp
